# T-Capture

./: CMakeLists.txt  README.md
samples/: CMakeLists.txt  camera-capture-async.cpp  camera-capture-sync.cpp  camera.cpp  sample_helper.hpp
samples/camera/mf/: async.cpp  sync.cpp
samples/camera/v4l2/: async.cpp  mmap.cpp
samples/mf/camera/: async.cpp  sync.cpp
samples/screen/pw/: dbus.cpp  legacy.cpp
samples/screen/x11/: async.cpp  legacy.cpp  shared.cpp
samples/v4l2/camera/: sync.cpp
src/: CMakeLists.txt  dbus.cmake  helper.cmake  mf.cmake  pw.cmake  v4l2.cmake  x11.cmake
src/include/: tcap.hpp
src/include/tcap/: camera.hpp  helper.hpp  platforms.hpp  screen.hpp  utils.hpp
src/include/tcap/camera/: mf.hpp  v4l2.hpp  windows.hpp
src/include/tcap/camera/mf/: async.hpp  awaitable.cpp  awaitable.hpp  buffer.cpp  buffer.hpp  callback.cpp  callback.hpp  coroutine.cpp  coroutine.hpp  device.cpp  device.hpp  devices.cpp  devices.hpp  media_type.cpp  media_type.hpp  present_desc.cpp  present_desc.hpp  reader.cpp  reader.hpp  reader_type.cpp  reader_type.hpp  sample.cpp  sample.hpp  set.cpp  set.hpp  source.cpp  source.hpp  stream_desc.cpp  stream_desc.hpp
src/include/tcap/camera/mf/device/: box.cpp  box.hpp  boxes.cpp  boxes.hpp  set.cpp  set.hpp
src/include/tcap/camera/mf/reader/: async.hpp  concepts.hpp  core.cpp  core.hpp  sync.hpp
src/include/tcap/camera/mf/reader/async/: awaitable.cpp  awaitable.hpp  callback.cpp  callback.hpp  concepts.hpp  reader.cpp  reader.hpp
src/include/tcap/camera/mf/reader/sync/: reader.cpp  reader.hpp
src/include/tcap/camera/v4l2/: device.hpp  format.cpp  format.hpp  queue.cpp  queue.hpp
src/include/tcap/camera/v4l2/buffer/: mmap.cpp  mmap.hpp
src/include/tcap/camera/v4l2/device/: box.cpp  box.hpp  boxes.cpp  boxes.hpp  caps.cpp  caps.hpp  path.cpp  path.hpp
src/include/tcap/camera/v4l2/format/: active.cpp  active.hpp  box.cpp  box.hpp  boxes.cpp  boxes.hpp  fps.cpp  fps.hpp  native.cpp  native.hpp  resolution.cpp  resolution.hpp
src/include/tcap/camera/v4l2/queue/: box.cpp  box.hpp  caps.cpp  caps.hpp  mmap.cpp  mmap.hpp
src/include/tcap/camera/v4l2/sample/: mmap.cpp  mmap.hpp
src/include/tcap/camera/windows/: impl.cpp  impl.hpp
src/include/tcap/common/: defines.h
src/include/tcap/helper/: call_once.hpp  charset.cpp  charset.hpp  error.cpp  error.hpp  fourcc.hpp
src/include/tcap/helper/call_once/: mf.hpp
src/include/tcap/helper/call_once/mf/: detail.cpp  detail.hpp
src/include/tcap/helper/mf/: attributes.cpp  attributes.hpp  wstring.cpp  wstring.hpp
src/include/tcap/screen/: dbus.hpp  pw.hpp  x11.hpp
src/include/tcap/screen/dbus/: arg.hpp  connection.cpp  connection.hpp  error.cpp  error.hpp  message.hpp
src/include/tcap/screen/dbus/api/create_session/: request.cpp  request.hpp
src/include/tcap/screen/dbus/arg/: array.cpp  array.hpp  entry.cpp  root.cpp  string.cpp  string.hpp  variant.cpp  variant.hpp
src/include/tcap/screen/dbus/message/: create_session.hpp
src/include/tcap/screen/x11/: display.cpp  display.hpp  image.cpp  image.hpp  screen.cpp  screen.hpp  window.hpp
src/include/tcap/screen/x11/display/: box.cpp  box.hpp  caps.cpp  caps.hpp
src/include/tcap/screen/x11/image/: legacy.cpp  legacy.hpp  shared.cpp  shared.hpp
src/include/tcap/screen/x11/window/: box.cpp  box.hpp  boxes.cpp  boxes.hpp
src/include/tcap/utils/: call_once.hpp  error.cpp  error.hpp  fourcc.hpp  mf.hpp  wstring.cpp  wstring.hpp
src/include/tcap/utils/call_once/: mf.hpp
src/include/tcap/utils/call_once/mf/: detail.cpp  detail.hpp
src/include/tcap/utils/mf/: call_once.cpp  wstring.cpp  wstring.hpp
src/tcap/: CMakeLists.txt
src/tcap/cmake/: dbus.cmake  helper.cmake  mf.cmake  pw.cmake  v4l2.cmake  x11.cmake
src/tcap/tcap/: screen.hpp
src/tcap/tcap/camera/: v4l2.hpp
src/tcap/tcap/camera/mf/: buffer.cpp  buffer.hpp  media_type.cpp  media_type.hpp  reader_type.cpp  reader_type.hpp  sample.cpp  sample.hpp  source.cpp  source.hpp
src/tcap/tcap/camera/mf/device/: box.cpp  box.hpp  boxes.cpp  boxes.hpp
src/tcap/tcap/camera/mf/reader/: core.cpp  core.hpp
src/tcap/tcap/camera/mf/reader/async/: awaitable.cpp  (+5 more)
src/tcap/tcap/camera/v4l2/: buffer.hpp  device.hpp  format.hpp  sample.hpp
src/tcap/tcap/camera/v4l2/buffer/: mmap.cpp  mmap.hpp
src/tcap/tcap/camera/v4l2/device/: box.cpp  box.hpp  caps.cpp  caps.hpp  path.cpp  path.hpp
src/tcap/tcap/camera/v4l2/format/: active.cpp  active.hpp  fps.cpp  fps.hpp  native.cpp  native.hpp  resolution.cpp  resolution.hpp
src/tcap/tcap/camera/v4l2/queue/: caps.cpp  caps.hpp  mmap.cpp  mmap.hpp
src/tcap/tcap/camera/v4l2/sample/: mmap.cpp  mmap.hpp
src/tcap/tcap/common/: defines.h
src/tcap/tcap/helper/: charset.cpp  charset.hpp  mf.hpp
src/tcap/tcap/helper/mf/: attributes.cpp  attributes.hpp
src/tcap/tcap/screen/: dbus.hpp  x11.hpp
src/tcap/tcap/screen/dbus/: api.hpp  connection.cpp  connection.hpp  error.cpp  error.hpp
src/tcap/tcap/screen/dbus/api/: create_session.hpp
src/tcap/tcap/screen/dbus/arg/: array.cpp  array.hpp  entry.cpp  entry.hpp  root.cpp  root.hpp  string.cpp  string.hpp  variant.cpp  variant.hpp
src/tcap/tcap/screen/x11/: image.hpp  screen.cpp  screen.hpp
src/tcap/tcap/screen/x11/display/: box.cpp  box.hpp  caps.cpp  caps.hpp
src/tcap/tcap/screen/x11/image/: legacy.cpp  legacy.hpp  shared.cpp  shared.hpp
src/tcap/tcap/screen/x11/window/: box.cpp  box.hpp  boxes.cpp  boxes.hpp
src/tcap/tcap/utils/: error.cpp  error.hpp  mf.hpp  pw.hpp
src/tcap/tcap/utils/mf/: call_once.cpp  call_once.hpp  wstring.cpp  wstring.hpp
src/tcap/tcap/utils/pw/: call_once.cpp  call_once.hpp
src/tloop/: CMakeLists.txt
src/tloop/cmake/: helper.cmake  iocp.cmake
src/tloop/tloop/: tloop.hpp  utils.hpp
src/tloop/tloop/common/: defines.h
src/tloop/tloop/iocp/: loop.cpp  loop.hpp
src/tloop/tloop/utils/: error.cpp  error.hpp
tests/: CMakeLists.txt
tests/camera/mf/: async.cpp  sync.cpp
tests/camera/v4l2/: mmap.cpp
tests/mf/camera/: async.cpp  sync.cpp
tests/screen/x11/: legacy.cpp  shared.cpp
tests/v4l2/camera/: sync.cpp
(+15 files in other folders)
